# stock2

./: .gitignore  0.run_all_process.bat  1_run_extract.bat  2_run_update.bat  2_run_update_us.bat  3_run_batch_update_us.bat  3_run_batch_update_us.ps1  3_run_compare_light.bat  4_run_compare_mom_light.bat  5_run_compare_me_and_mom.bat  6_run_compare_all.bat  mock_extract_trades.py  mock_update_holdings.py  pyproject.toml  run_compare.bat  test_batch_logic.bat
data/: kr_holidays.json  krx_code_cache.json  sector_mapping.json  sector_mapping_by_name.json  stock_master.json  us_stock_master.json
docs/: PROJECT_RULES.md
src/: batch_update_holdings_us.py  compare_holdings.py  compare_holdings_light.py  compare_me_and_mom.py  compare_three_way.py  extract_trades.py  update_holdings.py  update_holdings_us.py
src/lib/: __init__.py  stock_utils.py
src/tools/: build_stock_master.py  sync_stock_master.py
src/utils/: fix_oci_cache.py  sync_cache_with_master.py
